poc for new analysis flow